--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -59,7 +59,7 @@
 /*---------------------------------------------------- */
 
 
-/******* HOME PAGE 1 *******/
+/******* HOME PAGE 2 *******/
 /*Hero area*/
 /*----------------------------------------------------*/
 @import "home_2/hero";
@@ -93,6 +93,23 @@
 @import "home_2/blog";
 /*---------------------------------------------------- */
 
+/******* HOME PAGE 3 *******/
+/*Hero area*/
+/*----------------------------------------------------*/
+@import "home_3/hero";
+/*---------------------------------------------------- */
+/*About area*/
+/*----------------------------------------------------*/
+@import "home_3/about";
+/*---------------------------------------------------- */
+/*Room area*/
+/*----------------------------------------------------*/
+@import "home_3/room";
+/*---------------------------------------------------- */
+/*Facility area*/
+/*----------------------------------------------------*/
+@import "home_3/facility";
+/*---------------------------------------------------- */
 
 
 /*Footer Section*/
