--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -110,6 +110,26 @@
 /*----------------------------------------------------*/
 @import "home_3/facility";
 /*---------------------------------------------------- */
+/*Food area*/
+/*----------------------------------------------------*/
+@import "home_3/food";
+/*---------------------------------------------------- */
+/*Project area*/
+/*----------------------------------------------------*/
+@import "home_3/project";
+/*---------------------------------------------------- */
+/*Testimonial area*/
+/*----------------------------------------------------*/
+@import "home_3/testimonial";
+/*---------------------------------------------------- */
+/*Gallery area*/
+/*----------------------------------------------------*/
+@import "home_3/gallery";
+/*---------------------------------------------------- */
+/*Blog area*/
+/*----------------------------------------------------*/
+@import "home_3/blog";
+/*---------------------------------------------------- */
 
 
 /*Footer Section*/
