--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -413,6 +413,9 @@
    					.header-navigation {
    						padding: 15px 0px;
    					}
+   					.dropdown-menu {
+   						top: 52px;
+   					}
    				}
    			}
    			&:is(.header_style_two) {
