--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,6 +489,9 @@ Font load
 .bk-header-section:is(.txa_sticky_header):is(.txa_sticky):is(.header_style_one):is(.ver_2) .header-navigation {
   padding: 15px 0px;
 }
+.bk-header-section:is(.txa_sticky_header):is(.txa_sticky):is(.header_style_one):is(.ver_2) .dropdown-menu {
+  top: 52px;
+}
 .bk-header-section:is(.txa_sticky_header):is(.txa_sticky):is(.header_style_two) {
   padding: 15px 0px;
   background-color: #000;
@@ -5862,6 +5865,11 @@ a:hover, a:focus {
   font-weight: 500;
   margin-top: 28px;
   background-color: #004040;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+.bk-hero3-form .form-wrapper button:hover {
+  background-color: var(--bk-prime-c);
 }
 
 .bk-hero3-text {
@@ -6119,6 +6127,8 @@ a:hover, a:focus {
 }
 .bk-room4-item .item-img img {
   border-radius: 24px;
+  -webkit-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
 }
 .bk-room4-item .item-text {
   padding: 28px;
@@ -6132,6 +6142,9 @@ a:hover, a:focus {
   font-size: 32px;
   font-weight: 700;
   padding-bottom: 15px;
+}
+.bk-room4-item .item-text h3:hover {
+  color: var(--bk-prime-c);
 }
 .bk-room4-item .item-text ul {
   padding-bottom: 12px;
@@ -6178,6 +6191,10 @@ a:hover, a:focus {
   color: #fff;
   background-color: var(--bk-prime-c);
 }
+.bk-room4-item:hover .item-img img {
+  -webkit-filter: grayscale(1);
+          filter: grayscale(1);
+}
 .bk-room4-item:hover .item-text {
   background-color: #EFE5DC;
 }
@@ -6185,6 +6202,55 @@ a:hover, a:focus {
 /*---------------------------------------------------- */
 /*Facility area*/
 /*----------------------------------------------------*/
+@-webkit-keyframes hithere {
+  30% {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+  40%, 60% {
+    -webkit-transform: rotate(-20deg) scale(1.2);
+    transform: rotate(-20deg) scale(1.2);
+  }
+  50% {
+    -webkit-transform: rotate(20deg) scale(1.2);
+    transform: rotate(20deg) scale(1.2);
+  }
+  70% {
+    -webkit-transform: rotate(0deg) scale(1.2);
+    transform: rotate(0deg) scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes hithere {
+  30% {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+  40%, 60% {
+    -webkit-transform: rotate(-20deg) scale(1.2);
+    transform: rotate(-20deg) scale(1.2);
+  }
+  50% {
+    -webkit-transform: rotate(20deg) scale(1.2);
+    transform: rotate(20deg) scale(1.2);
+  }
+  70% {
+    -webkit-transform: rotate(0deg) scale(1.2);
+    transform: rotate(0deg) scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+.ed-feature5-sec {
+  z-index: 2;
+  position: relative;
+}
+
 .bk-sec-bg-wrap {
   z-index: 1;
   background-color: #000000;
@@ -6330,6 +6396,10 @@ a:hover, a:focus {
 .bk-facility3-item .item-text p {
   font-size: 17px;
 }
+.bk-facility3-item:hover .item-icon {
+  -webkit-animation: hithere 1s ease infinite;
+          animation: hithere 1s ease infinite;
+}
 
 .bk-fact-top {
   gap: 30px 30px;
@@ -6366,9 +6436,19 @@ a:hover, a:focus {
 }
 
 .bk-fact-item {
+  opacity: 0;
   gap: 15px 30px;
   padding: 40px 0px;
   border-bottom: 1px solid rgba(239, 229, 220, 0.15);
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+}
+.bk-fact-item:is(.in-view) {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
   .bk-fact-item {
@@ -6396,6 +6476,10 @@ a:hover, a:focus {
   max-width: 378px;
   overflow: hidden;
   border-radius: 12px;
+}
+.bk-fact-item .item-img img {
+  -webkit-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .bk-fact-item .item-img {
@@ -6428,6 +6512,10 @@ a:hover, a:focus {
   bottom: -80px;
   color: #F7F6F2;
   font-size: 18px;
+}
+.bk-fact-item:hover .item-img img {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 /*---------------------------------------------------- */
@@ -6473,11 +6561,50 @@ a:hover, a:focus {
   border-radius: 100%;
 }
 .bk-food-item .inner-img {
+  z-index: 1;
   width: 200px;
   height: 200px;
+  position: relative;
   overflow: hidden;
   border-radius: 100%;
   border: 10px solid #F7F6F2;
+}
+.bk-food-item .inner-img img {
+  -webkit-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+}
+.bk-food-item .inner-img:before {
+  position: absolute;
+  height: 0;
+  width: 0;
+  top: 50%;
+  left: 50%;
+  content: "";
+  padding-top: 0px;
+  background-color: rgba(11, 11, 11, 0.4);
+  text-align: center;
+  border-radius: 100%;
+  opacity: 0;
+  z-index: 3;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+.bk-food-item .inner-img:after {
+  position: absolute;
+  content: "";
+  height: 0;
+  width: 0;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  padding-top: 0px;
+  border-radius: 100%;
+  background-color: rgba(11, 11, 11, 0.4);
+  text-align: center;
+  opacity: 0;
+  z-index: 4;
+  -webkit-transition: all 1.5s ease;
+  transition: all 1.5s ease;
 }
 .bk-food-item .inner-price {
   left: 0;
@@ -6486,6 +6613,7 @@ a:hover, a:focus {
   color: #fff;
   width: 100px;
   height: 100px;
+  z-index: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -6515,6 +6643,9 @@ a:hover, a:focus {
   font-weight: 700;
   padding-bottom: 8px;
 }
+.bk-food-item .item-text h3:hover {
+  color: var(--bk-prime-c);
+}
 .bk-food-item .item-text p {
   padding-bottom: 30px;
 }
@@ -6531,6 +6662,24 @@ a:hover, a:focus {
   color: #fff;
   border: 1px solid var(--bk-prime-c);
   background-color: var(--bk-prime-c);
+}
+.bk-food-item:hover .inner-img:before {
+  opacity: 1;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+.bk-food-item:hover .inner-img:after {
+  opacity: 1;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+.bk-food-item:hover .inner-img img {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 .bk-food-item:hover .inner-price {
   top: -50px;
@@ -6612,6 +6761,9 @@ a:hover, a:focus {
 .bk-project3-item .item-img {
   width: 77%;
   height: 1018px;
+  -webkit-transition: all 900ms ease-in-out;
+  transition: all 900ms ease-in-out;
+  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
 }
 @media only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 481px) and (max-width: 575px), (max-width: 480px) {
   .bk-project3-item .item-img {
@@ -6660,18 +6812,46 @@ a:hover, a:focus {
   border-radius: 24px;
   margin-bottom: 24px;
 }
+.bk-project3-item .item-card-wrap .inner-img img {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 900ms ease-in-out;
+  transition: all 900ms ease-in-out;
+}
 .bk-project3-item .item-card-wrap .item-text span {
   color: #004040;
   padding-bottom: 5px;
+  opacity: 0;
+  -webkit-transition: 1000ms cubic-bezier(0.5, -0.75, 0.3, 2.5);
+  transition: 1000ms cubic-bezier(0.5, -0.75, 0.3, 2.5);
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
 }
 .bk-project3-item .item-card-wrap .item-text h3 {
   font-size: 32px;
   font-weight: 700;
   padding-bottom: 8px;
+  opacity: 0;
+  -webkit-transition: 1000ms cubic-bezier(0.5, -0.75, 0.3, 2.5);
+  transition: 1000ms cubic-bezier(0.5, -0.75, 0.3, 2.5);
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
 }
 .bk-project3-item .item-card-wrap .item-text p {
   opacity: 0.8;
   padding-bottom: 28px;
+  opacity: 0;
+  -webkit-transition: 1000ms cubic-bezier(0.5, -0.75, 0.3, 2.5);
+  transition: 1000ms cubic-bezier(0.5, -0.75, 0.3, 2.5);
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+}
+.bk-project3-item .item-card-wrap .item-text .bk-btn1 {
+  opacity: 0;
+  -webkit-transition: 1000ms cubic-bezier(0.5, -0.75, 0.3, 2.5);
+  transition: 1000ms cubic-bezier(0.5, -0.75, 0.3, 2.5);
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
 }
 .bk-project3-item .item-card-wrap .item-text .bk-btn1 a {
   position: relative;
@@ -6685,6 +6865,42 @@ a:hover, a:focus {
   position: absolute;
   border-radius: 10px;
   border-bottom: 1px solid var(--bk-prime-c);
+}
+
+.swiper-slide-active .bk-project3-item .item-img {
+  -webkit-transition-delay: 600ms;
+          transition-delay: 600ms;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+.swiper-slide-active .bk-project3-item .item-card-wrap .inner-img img {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+.swiper-slide-active .bk-project3-item .item-card-wrap .item-text span {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+}
+.swiper-slide-active .bk-project3-item .item-card-wrap .item-text h3 {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+  -webkit-transition-delay: 100ms;
+          transition-delay: 100ms;
+}
+.swiper-slide-active .bk-project3-item .item-card-wrap .item-text p {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+  -webkit-transition-delay: 150ms;
+          transition-delay: 150ms;
+}
+.swiper-slide-active .bk-project3-item .item-card-wrap .item-text .bk-btn1 {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+  -webkit-transition-delay: 200ms;
+          transition-delay: 200ms;
 }
 
 /*---------------------------------------------------- */
@@ -6889,6 +7105,42 @@ a:hover, a:focus {
 .bk-gallery-item .item-img a {
   width: 100%;
   height: 100%;
+  position: relative;
+}
+.bk-gallery-item .item-img a:after {
+  left: 0;
+  right: 0;
+  top: 40%;
+  opacity: 0;
+  color: #fff;
+  font-size: 30px;
+  content: "\f066";
+  font-weight: 900;
+  text-align: center;
+  position: absolute;
+  -webkit-transition: 500ms all ease;
+  transition: 500ms all ease;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  font-family: "Font Awesome 5 free";
+}
+.bk-gallery-item .item-img a:before {
+  top: 0;
+  left: 0;
+  width: 0%;
+  content: "";
+  height: 100%;
+  position: absolute;
+  -webkit-transition: 500ms all ease;
+  transition: 500ms all ease;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.bk-gallery-item:hover .item-img a:before {
+  width: 100%;
+}
+.bk-gallery-item:hover .item-img a:after {
+  top: 50%;
+  opacity: 1;
 }
 
 .bk-gl-nav {
@@ -7034,6 +7286,10 @@ a:hover, a:focus {
   margin-bottom: 20px;
   border-radius: 12px;
 }
+.bk-blog3-item .item-img img {
+  -webkit-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+}
 .bk-blog3-item .item-text span {
   opacity: 0.8;
   font-size: 16px;
@@ -7049,11 +7305,22 @@ a:hover, a:focus {
     font-size: 24px;
   }
 }
+.bk-blog3-item .item-text .blg_title:hover {
+  color: var(--bk-prime-c);
+}
 .bk-blog3-item .item-text .blog_more {
   color: #000000;
   font-size: 18px;
   font-weight: 700;
   font-family: var(--bk-heading);
+}
+.bk-blog3-item .item-text .blog_more:hover {
+  color: #004040;
+  letter-spacing: 1px;
+}
+.bk-blog3-item:hover .item-img img {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 /*---------------------------------------------------- */
