--- a/assets/scss/home_3/_facility.scss
+++ b/assets/scss/home_3/_facility.scss
@@ -1,3 +1,29 @@
+@keyframes hithere {
+	30% {
+		-webkit-transform: scale(1.2);
+		transform: scale(1.2);
+	}
+	40%, 60% {
+		-webkit-transform: rotate(-20deg) scale(1.2);
+		transform: rotate(-20deg) scale(1.2);
+	}
+	50% {
+		-webkit-transform: rotate(20deg) scale(1.2);
+		transform: rotate(20deg) scale(1.2);
+	}
+	70% {
+		-webkit-transform: rotate(0deg) scale(1.2);
+		transform: rotate(0deg) scale(1.2);
+	}
+	100% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+}
+.ed-feature5-sec {
+	z-index: 2;
+	position: relative;
+}
 .bk-sec-bg-wrap {
 	z-index: 1;
 	background-color: #000000;
@@ -126,6 +152,11 @@
 			font-size: 17px;
 		}
 	}
+	&:hover {
+		.item-icon {
+			animation: hithere 1s ease infinite;
+		}
+	}
 }
 
 .bk-fact-top {
@@ -153,9 +184,16 @@
 }
 
 .bk-fact-item {
+	opacity: 0;
 	gap: 15px 30px;
 	padding: 40px 0px;
 	border-bottom: 1px solid  rgba(239, 229, 220, .15);
+	transform: translateY(100%);
+	transition: all 500ms ease-in-out;
+	&:is(.in-view) {
+		transform: translateY(0);
+		opacity: 1;
+	}
 	@media #{$md,$sm,$xs,$xxs} {
 		flex-wrap: wrap;
 	}
@@ -175,6 +213,9 @@
 		max-width: 378px;
 		overflow: hidden;
 		border-radius: 12px;
+		img {
+			transition: all 500ms ease-in-out;
+		}
 		@media #{$lg} {
 			max-width: 300px;
 		}
@@ -200,6 +241,13 @@
 			bottom: -80px;
 			color: #F7F6F2;
 			font-size: 18px;
+		}
+	}
+	&:hover {
+		.item-img {
+			img {
+				transform: scale(1.1);
+			}
 		}
 	}
 }
