--- a/assets/scss/home_3/_gallery.scss
+++ b/assets/scss/home_3/_gallery.scss
@@ -100,6 +100,48 @@
 		a {
 			width: 100%;
 			height: 100%;
+			position: relative;
+			&:after {
+				left: 0;
+				right: 0;
+				top: 40%;
+				opacity: 0;
+				color: #fff;
+				font-size: 30px;
+				content: "\f066";
+				font-weight: 900;
+				text-align: center;
+				position: absolute;
+				-webkit-transition: 500ms all ease;
+				transition: 500ms all ease;
+				-webkit-transform: translateY(-50%);
+				transform: translateY(-50%);
+				font-family: "Font Awesome 5 free";
+			}
+			&:before {
+				top: 0;
+				left: 0;
+				width: 0%;
+				content: "";
+				height: 100%;
+				position: absolute;
+				-webkit-transition: 500ms all ease;
+				transition: 500ms all ease;
+				background-color: rgba(0, 0, 0, .5);
+			}
+		}
+	}
+	&:hover {
+		.item-img {
+			a {
+				&:before {
+					width: 100%;
+				}
+				&:after {
+					top: 50%;
+					opacity: 1;
+				}
+			}
 		}
 	}
 }
