--- a/assets/scss/home_3/_project.scss
+++ b/assets/scss/home_3/_project.scss
@@ -51,6 +51,8 @@
 	.item-img {
 		width: 77%;
 		height: 1018px;
+		transition: all 900ms ease-in-out;
+		clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
 		@media #{$sm,$xs,$xxs} {
 			display: none;
 		}
@@ -89,22 +91,38 @@
 			margin-top: -48px;
 			border-radius: 24px;
 			margin-bottom: 24px;
+			img {
+				transform: scale(1.2);
+				transition: all 900ms ease-in-out;
+			}
 		}
 		.item-text {
 			span {
 				color: #004040;
 				padding-bottom: 5px;
+				opacity: 0;
+				transition: 1000ms cubic-bezier(0.5, -0.75, 0.3, 2.5);
+				transform: translateY(20px);
 			}
 			h3 {
 				font-size: 32px;
 				font-weight: 700;
 				padding-bottom: 8px;
+				opacity: 0;
+				transition: 1000ms cubic-bezier(0.5, -0.75, 0.3, 2.5);
+				transform: translateY(20px);
 			}
 			p {
 				opacity: .8;
 				padding-bottom: 28px;
+				opacity: 0;
+				transition: 1000ms cubic-bezier(0.5, -0.75, 0.3, 2.5);
+				transform: translateY(20px);
 			}
 			.bk-btn1 {
+				opacity: 0;
+				transition: 1000ms cubic-bezier(0.5, -0.75, 0.3, 2.5);
+				transform: translateY(20px);
 				a {
 					position: relative;
 					&:before {
@@ -117,6 +135,42 @@
 						border-radius: 10px;
 						border-bottom: 1px solid var(--bk-prime-c);
 					}
+				}
+			}
+		}
+	}
+}
+.swiper-slide-active {
+	.bk-project3-item {
+		.item-img {
+			transition-delay: 600ms;
+			clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+		}
+		.item-card-wrap {
+			.inner-img {
+				img {
+					transform: scale(1.0);
+				}
+			}
+			.item-text {
+				span {
+					opacity: 1;
+					transform: translateY(0px);
+				}
+				h3 {
+					opacity: 1;
+					transform: translateY(0px);
+					transition-delay: 100ms;
+				}
+				p {
+					opacity: 1;
+					transform: translateY(0px);
+					transition-delay: 150ms;
+				}
+				.bk-btn1 {
+					opacity: 1;
+					transform: translateY(0px);
+					transition-delay: 200ms;
 				}
 			}
 		}
