--- a/assets/scss/home_3/_blog.scss
+++ b/assets/scss/home_3/_blog.scss
@@ -33,6 +33,8 @@
 }
 
 .bk-blog3-label {
+	padding-top: 30px;
+	border-top: 1px solid #EFE5DC;
 	a {
 		color: #004040;
 		font-weight: 600;
@@ -54,6 +56,7 @@
 		max-width: 100%;
 	}
 	h3 {
+		font-weight: 600;
 		font-size: 44px;
 		max-width: 400px;
 		line-height: 1.2;
